--- a/app/src/main/res/navigation/nav_graph_usuaris.xml
+++ b/app/src/main/res/navigation/nav_graph_usuaris.xml
@@ -17,9 +17,6 @@
             android:id="@+id/action_menuUsuari_to_jugadors"
             app:destination="@id/jugadors" />
         <action
-            android:id="@+id/action_menuUsuari_to_fotoPerfil"
-            app:destination="@id/fotoPerfil" />
-        <action
             android:id="@+id/action_menuUsuari_to_configuracio2"
             app:destination="@id/configuracio2" />
     </fragment>
@@ -42,17 +39,6 @@
             app:destination="@id/menuUsuari" />
     </fragment>
     <fragment
-        android:id="@+id/fotoPerfil"
-        android:name="FotoPerfil"
-        android:label="FotoPerfil" >
-        <action
-            android:id="@+id/action_fotoPerfil_to_menuUsuari"
-            app:destination="@id/menuUsuari" />
-        <action
-            android:id="@+id/action_fotoPerfil_to_configuracio2"
-            app:destination="@id/configuracio2" />
-    </fragment>
-    <fragment
         android:id="@+id/configuracio2"
         android:name="copernic.cat.kingsleague.Configuracio"
         android:label="fragment_configuracio"
@@ -61,11 +47,11 @@
             android:id="@+id/action_configuracio2_to_menuUsuari"
             app:destination="@id/menuUsuari" />
         <action
-            android:id="@+id/action_configuracio2_to_fotoPerfil"
-            app:destination="@id/fotoPerfil" />
-        <action
             android:id="@+id/action_configuracio2_to_mapsUsuaris"
             app:destination="@id/mapsUsuaris" />
+        <action
+            android:id="@+id/action_configuracio2_to_fotoPerfil"
+            app:destination="@id/fotoPerfil" />
     </fragment>
     <fragment
         android:id="@+id/mapsUsuaris"
@@ -73,6 +59,15 @@
         android:label="MapsUsuaris" >
         <action
             android:id="@+id/action_mapsUsuaris_to_configuracio2"
+            app:destination="@id/configuracio2" />
+    </fragment>
+    <fragment
+        android:id="@+id/fotoPerfil"
+        android:name="copernic.cat.kingsleague.FotoPerfil"
+        android:label="fragment_foto_perfil"
+        tools:layout="@layout/fragment_foto_perfil_admin" >
+        <action
+            android:id="@+id/action_fotoPerfil_to_configuracio2"
             app:destination="@id/configuracio2" />
     </fragment>
 </navigation>
