--- a/app/src/main/res/layout-sw600dp/fragment_crear_equips.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_crear_equips.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="90dp"
         android:text="@string/crear_equips"
-        android:textSize="30sp"
+        android:textSize="50sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,10 +21,12 @@
     <Button
         android:id="@+id/btn_tornar_Crear_equips"
         style="@style/Widget.ComunicaProdis.ButtonConfirm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
         android:layout_marginTop="63dp"
+        android:gravity="center"
         android:text="@string/tornar"
+        android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/crear_equip" />
@@ -36,6 +38,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:text="@string/nom"
+        android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/TitolCrearEquips" />
 
@@ -54,10 +57,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="20dp"
         android:hint="@string/introdueix_el_nom_del_equip"
         android:minHeight="48dp"
         android:textColor="#757575"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nomEquip"
         tools:ignore="DuplicateSpeakableTextCheck,MissingConstraints,TextContrastCheck">
@@ -77,11 +83,13 @@
     <Button
         android:id="@+id/crear_equip"
         style="@style/Widget.ComunicaProdis.ButtonEnter"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
         android:layout_marginTop="100dp"
         android:backgroundTint="@color/blue"
+        android:gravity="center"
         android:text="@string/crear"
+        android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editNomEquip" />
