--- a/app/src/main/res/layout-sw600dp/activity_register.xml
+++ b/app/src/main/res/layout-sw600dp/activity_register.xml
@@ -35,6 +35,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:text="@string/contrasenya"
+                android:textSize="30sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/registre_nomUsuariTextInput" />
 
@@ -57,6 +58,7 @@
                     android:inputType="textPassword"
                     android:minHeight="48dp"
                     android:textColor="#757575"
+                    android:textSize="30sp"
                     tools:ignore="TextContrastCheck">
 
                 </com.google.android.material.textfield.TextInputEditText>
@@ -68,6 +70,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:text="Repetir Contrasenya"
+                android:textSize="30sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/registre_contrasenyaTextInput" />
 
@@ -90,6 +93,7 @@
                     android:inputType="textPassword"
                     android:minHeight="48dp"
                     android:textColor="#757575"
+                    android:textSize="30sp"
                     tools:ignore="TextContrastCheck">
 
                 </com.google.android.material.textfield.TextInputEditText>
@@ -101,6 +105,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
                 android:text="@string/gmail"
+                android:textSize="40sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/LoginLogo" />
 
@@ -120,6 +125,7 @@
                     android:hint="@string/gmail"
                     android:minHeight="48dp"
                     android:textColor="#757575"
+                    android:textSize="30sp"
                     tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck">
 
                 </com.google.android.material.textfield.TextInputEditText>
@@ -129,22 +135,24 @@
             <Button
                 android:id="@+id/registre_Guardar"
                 style="@style/Widget.ComunicaProdis.ButtonConfirm"
-                android:layout_width="168dp"
-                android:layout_height="50dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="100dp"
                 android:layout_marginTop="100dp"
                 android:backgroundTint="#2196F3"
                 android:text="@string/confirmar"
+                android:textSize="30dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/registre_RepetirContrasenyaTextInput" />
 
             <Button
                 android:id="@+id/registre_cancelar"
                 style="@style/Widget.ComunicaProdis.ButtonCancel"
-                android:layout_width="168dp"
-                android:layout_height="50dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="200dp"
                 android:text="@string/cancelar"
+                android:textSize="30sp"
                 app:layout_constraintStart_toEndOf="@+id/registre_Guardar"
                 app:layout_constraintTop_toTopOf="@+id/registre_Guardar" />
 
