--- a/app/src/main/res/layout-sw600dp/recuperar_contrasenya.xml
+++ b/app/src/main/res/layout-sw600dp/recuperar_contrasenya.xml
@@ -52,6 +52,7 @@
             android:id="@+id/textInputEditTextEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textSize="30sp"
             tools:ignore="SpeakableTextPresentCheck" />
 
     </com.google.android.material.textfield.TextInputLayout>
