--- a/app/src/main/res/layout-sw600dp/fragment_jugadors_admin.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_jugadors_admin.xml
@@ -5,31 +5,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     style="@style/constraintlayoutTherme"
-    tools:context=".CrearEquips">
+    tools:context=".JugadorsAdmin">
 
     <TextView
-        android:id="@+id/TitolCrearEquips"
+        android:id="@+id/TitolJugadors"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="90dp"
-        android:text="@string/crear_equips"
+        android:text="@string/veure_jugadors"
         android:textSize="50sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btn_tornar_Crear_equips"
+        android:id="@+id/btn_tornar_jugadors"
         style="@style/Widget.ComunicaProdis.ButtonConfirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="63dp"
-        android:gravity="center"
+        android:layout_marginTop="25dp"
         android:text="@string/tornar"
         android:textSize="35sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/crear_equip" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_veure_jugadors" />
 
     <TextView
         android:id="@+id/nomEquip"
@@ -37,10 +36,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        android:text="@string/nom"
+        android:text="@string/nom_del_equip"
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TitolCrearEquips" />
+        app:layout_constraintTop_toBottomOf="@+id/TitolJugadors" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/nomEquipTextInput"
@@ -57,40 +56,36 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="20dp"
-        android:hint="@string/introdueix_el_nom_del_equip"
+        android:layout_marginTop="4dp"
+        android:hint="@string/nom"
         android:minHeight="48dp"
         android:textColor="#757575"
         android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nomEquip"
         tools:ignore="DuplicateSpeakableTextCheck,MissingConstraints,TextContrastCheck">
 
     </com.google.android.material.textfield.TextInputEditText>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/jugadorTextInput"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        app:layout_constraintTop_toBottomOf="@+id/nomEquip"
-        tools:layout_editor_absoluteX="40dp" />
-
-
     <Button
-        android:id="@+id/crear_equip"
-        style="@style/Widget.ComunicaProdis.ButtonEnter"
+        android:id="@+id/btn_veure_jugadors"
+        style="@style/Widget.ComunicaProdis.ButtonConfirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="10dp"
         android:backgroundTint="@color/blue"
-        android:gravity="center"
-        android:text="@string/crear"
+        android:text="@string/veure"
         android:textSize="35sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rvJugadors" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvJugadors"
+        android:layout_width="600dp"
+        android:layout_height="500dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="5dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editNomEquip" />
 </androidx.constraintlayout.widget.ConstraintLayout>
