--- a/app/src/main/res/layout-sw600dp/fragment_menu_usuari.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_menu_usuari.xml
@@ -30,7 +30,7 @@
 
     <Button
         android:id="@+id/btnJugadors"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
         android:layout_marginTop="51dp"
@@ -42,7 +42,7 @@
 
     <Button
         android:id="@+id/btnClasificacio"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="51dp"
