--- a/app/src/main/res/layout/fragment_modificar_classificacio.xml
+++ b/app/src/main/res/layout/fragment_modificar_classificacio.xml
@@ -26,12 +26,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="120dp"
+        android:layout_marginTop="43dp"
         android:layout_marginEnd="120dp"
-        android:layout_marginBottom="200dp"
         android:text="@string/tornar"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ModificarClassificacio" />
 
     <TextView
         android:id="@+id/nomEquip"
