--- a/app/src/main/res/layout/fragment_jugadors.xml
+++ b/app/src/main/res/layout/fragment_jugadors.xml
@@ -80,8 +80,8 @@
         android:id="@+id/rvJugadors"
         android:layout_width="325dp"
         android:layout_height="180dp"
-        android:layout_marginStart="40dp"
         android:layout_marginTop="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editNomEquip" />
 </androidx.constraintlayout.widget.ConstraintLayout>
