--- a/app/src/main/res/navigation/nav_graph_usuaris.xml
+++ b/app/src/main/res/navigation/nav_graph_usuaris.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/menuUsuari"
-        android:name="copernic.cat.kingsleague.MenuUsuari"
+        android:name="copernic.cat.kingsleague.usuari.MenuUsuari"
         android:label="fragment_menu_usuari"
         tools:layout="@layout/fragment_menu_usuari" >
         <action
@@ -22,7 +22,7 @@
     </fragment>
     <fragment
         android:id="@+id/classificacio2"
-        android:name="copernic.cat.kingsleague.Classificacio"
+        android:name="copernic.cat.kingsleague.usuari.Classificacio"
         android:label="fragment_classificacio"
         tools:layout="@layout/fragment_classificacio" >
         <action
@@ -31,7 +31,7 @@
     </fragment>
     <fragment
         android:id="@+id/jugadors"
-        android:name="copernic.cat.kingsleague.Jugadors"
+        android:name="copernic.cat.kingsleague.usuari.Jugadors"
         android:label="fragment_jugadors"
         tools:layout="@layout/fragment_jugadors" >
         <action
@@ -40,7 +40,7 @@
     </fragment>
     <fragment
         android:id="@+id/configuracio2"
-        android:name="copernic.cat.kingsleague.Configuracio"
+        android:name="copernic.cat.kingsleague.usuari.Configuracio"
         android:label="fragment_configuracio"
         tools:layout="@layout/fragment_configuracio" >
         <action
@@ -55,7 +55,7 @@
     </fragment>
     <fragment
         android:id="@+id/mapsUsuaris"
-        android:name="cat.copernic.comunicatsprodis.MapsUsuaris"
+        android:name="copernic.cat.kingsleague.usuari.MapsUsuaris"
         android:label="MapsUsuaris" >
         <action
             android:id="@+id/action_mapsUsuaris_to_configuracio2"
@@ -63,7 +63,7 @@
     </fragment>
     <fragment
         android:id="@+id/fotoPerfil"
-        android:name="copernic.cat.kingsleague.FotoPerfil"
+        android:name="copernic.cat.kingsleague.usuari.FotoPerfil"
         android:label="fragment_foto_perfil"
         tools:layout="@layout/fragment_foto_perfil" >
         <action
