--- a/app/src/main/res/layout/fragment_crear_jugador.xml
+++ b/app/src/main/res/layout/fragment_crear_jugador.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     style="@style/constraintlayoutTherme"
-    tools:context=".CrearJugador">
+    tools:context=".administrador.CrearJugador">
 
     <TextView
         android:id="@+id/TitolCrearJugadors"
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        android:text="@string/nom"
+        android:text="@string/nom_equip"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/TitolCrearJugadors" />
 
