--- a/app/src/main/res/layout/fragment_configuracio.xml
+++ b/app/src/main/res/layout/fragment_configuracio.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Configuracio">
+    tools:context=".usuari.Configuracio">
 
     <TextView
         android:id="@+id/titol_configuracio"
