--- a/app/src/main/res/layout/fragment_jugadors.xml
+++ b/app/src/main/res/layout/fragment_jugadors.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     style="@style/constraintlayoutTherme"
-    tools:context=".Jugadors">
+    tools:context=".usuari.Jugadors">
 
     <TextView
         android:id="@+id/TitolJugadors"
