--- a/app/src/main/res/layout/fragment_modificar_classificacio.xml
+++ b/app/src/main/res/layout/fragment_modificar_classificacio.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     style="@style/constraintlayoutTherme"
-    tools:context=".ModificarClassificacio">
+    tools:context=".administrador.ModificarClassificacio">
 
     <TextView
         android:id="@+id/TitolModificarClassificacio"
