--- a/app/src/main/res/layout/fragment_foto_perfil.xml
+++ b/app/src/main/res/layout/fragment_foto_perfil.xml
@@ -26,7 +26,7 @@
             android:layout_width="132dp"
             android:layout_height="151dp"
             android:layout_marginTop="50dp"
-            android:contentDescription="TODO"
+            android:contentDescription="@string/s_una_imatge_on_surt_una_silueta_de_persona"
             android:src="@drawable/foto_perfil"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -36,7 +36,7 @@
             android:id="@+id/img_Button_buscar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="TODO"
+            android:contentDescription="@string/lupa_per_buscar"
             android:src="@android:drawable/ic_menu_upload"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
