--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -22,7 +22,7 @@
                 android:id="@+id/LoginLogo"
                 android:layout_width="200dp"
                 android:layout_height="100dp"
-                android:contentDescription="todo"
+                android:contentDescription="@string/surt_un_lle_que_s_el_logotip_de_l_aplicaci"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.497"
                 app:layout_constraintStart_toStartOf="parent"
@@ -67,7 +67,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
-                android:text="Repetir Contrasenya"
+                android:text="@string/repetir_contrasenya"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/registre_contrasenyaTextInput" />
 
