--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -13,7 +13,7 @@
         android:layout_width="200dp"
         android:layout_height="100dp"
         android:layout_marginTop="100dp"
-        android:contentDescription="TODO"
+        android:contentDescription="@string/surt_un_lle_que_s_el_logotip_de_l_aplicaci"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
