--- a/app/src/main/res/layout/fragment_crear_jugador.xml
+++ b/app/src/main/res/layout/fragment_crear_jugador.xml
@@ -39,40 +39,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/TitolCrearJugadors" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/nomEquipTextInput"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        app:layout_constraintTop_toBottomOf="@+id/nomEquip"
-        tools:layout_editor_absoluteX="40dp" />
-
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/editNomEquip"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
-        android:hint="@string/introdueix_el_nom_del_equip"
-        android:minHeight="48dp"
-        android:textColor="#757575"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nomEquip"
-        tools:ignore="DuplicateSpeakableTextCheck,MissingConstraints,TextContrastCheck">
-
-    </com.google.android.material.textfield.TextInputEditText>
 
     <TextView
         android:id="@+id/Jugadors"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:text="@string/jugador"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editNomEquip" />
+        app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/jugadorTextInput"
@@ -112,5 +88,25 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editjugador" />
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="1dp"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="@color/primaryColor"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nomEquip">
+
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="1dp"
+            app:layout_constraintTop_toBottomOf="@+id/editNomEquip"
+            tools:layout_editor_absoluteX="1dp" />
+
+    </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
 
