--- a/app/src/main/res/layout/fragment_modificar_classificacio.xml
+++ b/app/src/main/res/layout/fragment_modificar_classificacio.xml
@@ -43,40 +43,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/TitolModificarClassificacio" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/nomEquipTextInput"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        app:layout_constraintTop_toBottomOf="@+id/nomEquip"
-        tools:layout_editor_absoluteX="40dp" />
-
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/editNomEquip"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
-        android:hint="@string/nom"
-        android:minHeight="48dp"
-        android:textColor="#757575"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nomEquip"
-        tools:ignore="DuplicateSpeakableTextCheck,MissingConstraints,TextContrastCheck">
-
-    </com.google.android.material.textfield.TextInputEditText>
 
     <TextView
         android:id="@+id/Puntuacio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:text="@string/puntuacio"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editNomEquip" />
+        app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/puntuacioTextInput"
@@ -117,5 +93,26 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editPuntuacio" />
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="1dp"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="@color/primaryColor"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nomEquip">
+
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="1dp"
+            app:layout_constraintTop_toBottomOf="@+id/editNomEquip"
+            tools:layout_editor_absoluteX="1dp" />
+
+    </androidx.cardview.widget.CardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 
