--- a/app/src/main/res/layout/fragment_jugadors_admin.xml
+++ b/app/src/main/res/layout/fragment_jugadors_admin.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     style="@style/constraintlayoutTherme"
     tools:context=".administrador.JugadorsAdmin">
-
     <TextView
         android:id="@+id/TitolJugadors"
         android:layout_width="wrap_content"
@@ -39,30 +38,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/TitolJugadors" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/nomEquipTextInput"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        app:layout_constraintTop_toBottomOf="@+id/nomEquip"
-        tools:layout_editor_absoluteX="40dp" />
-
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/editNomEquip"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
-        android:hint="@string/nom"
-        android:minHeight="48dp"
-        android:textColor="#757575"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nomEquip"
-        tools:ignore="DuplicateSpeakableTextCheck,MissingConstraints,TextContrastCheck">
-
-    </com.google.android.material.textfield.TextInputEditText>
 
     <Button
         android:id="@+id/btn_veure_jugadors"
@@ -80,9 +55,29 @@
         android:id="@+id/rvJugadors"
         android:layout_width="325dp"
         android:layout_height="180dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editNomEquip" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="1dp"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="@color/primaryColor"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nomEquip">
+
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="1dp"
+            app:layout_constraintTop_toBottomOf="@+id/editNomEquip"
+            tools:layout_editor_absoluteX="1dp" />
+
+    </androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
